--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,11 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+Under construction (2021-09-25).
+
+<!-- {% include base_path %}
 
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
+ -->
