--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,7 +5,7 @@ permalink: /teaching/
 author_profile: true
 ---
 
-Under construction (2021-09-25).
+NB2161 Bioinformatics (BSc Nanobiology, TU Delft).
 
 <!-- {% include base_path %}
 
