--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -7,7 +7,7 @@ author_profile: true
 
 Under construction (2021-09-25).
 
-<!-- {% if site.talkmap_link == true %}
+{% if site.talkmap_link == true %}
 
 <p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
 
@@ -16,4 +16,4 @@ Under construction (2021-09-25).
 {% for post in site.talks reversed %}
   {% include archive-single-talk.html %}
 {% endfor %}
- -->
+
