--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -4,8 +4,14 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
+## Courses 
 
-NB2161 Bioinformatics (BSc Nanobiology, TU Delft).
+Spring 2022: NB2161 Bioinformatics (BSc Nanobiology, TU Delft).
+
+
+## Student projects
+
+If you are looking for a research project (BSc or MSc thesis), please [reach out](https://jbaaijens.github.io/contact/)!
 
 <!-- {% include base_path %}
 
