--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -4,12 +4,12 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
-## Courses 
+<h1>Courses</h1>
 
 Spring 2022: NB2161 Bioinformatics (BSc Nanobiology, TU Delft).
 
 
-## Student projects
+<h1>Student projects</h1>
 
 If you are looking for a research project (BSc or MSc thesis), please [reach out](https://jbaaijens.github.io/contact/)!
 
