--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -11,7 +11,7 @@ Spring 2022: NB2161 Bioinformatics (BSc Nanobiology, TU Delft).
 
 <h1>Student projects</h1>
 
-If you are looking for a research project (BSc or MSc thesis), please [reach out](https://jbaaijens.github.io/contact/)!
+If you are looking for a research project (BSc or MSc thesis), please <a href="https://jbaaijens.github.io/contact/">reach out</a> [reach out](https://jbaaijens.github.io/contact/)!
 
 <!-- {% include base_path %}
 
