--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -4,14 +4,16 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
-<h1>Courses</h1>
+
+<h2>Courses</h2>
 
 Spring 2022: NB2161 Bioinformatics (BSc Nanobiology, TU Delft).
 
 
-<h1>Student projects</h1>
+<h2>Student projects</h2>
 
-If you are looking for a research project (BSc or MSc thesis), please <a href="https://jbaaijens.github.io/contact/">reach out</a> [reach out](https://jbaaijens.github.io/contact/)!
+If you are looking for a research project (BSc or MSc thesis), please <a href="https://jbaaijens.github.io/contact/">reach out</a>! 
+<!-- [reach out](https://jbaaijens.github.io/contact/)! -->
 
 <!-- {% include base_path %}
 
